[project]
name = "ibkr-trade-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "lxml>=5.4.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "streamlit>=1.46.1",
]

[project.scripts]
ibkr-trade-visualization = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src", "main.py"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
